--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,19 @@
 @import "colors";
 @import "header";
 @import "sidebar";
+@import "content";
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 }
+
 main {
     display: grid;
-    grid-template-columns: 1fr 4fr;
-    grid-template-rows: 1fr 5fr;
+    grid-template-columns: 1fr minmax(700px, 4fr);
+    display: grid;
+    //grid-template: max-content 100vh / max-content minmax(700px, 1fr);
 }
 .header {
     background-color: $light;
@@ -22,13 +25,6 @@ main {
     grid-column: 1;
     grid-row: 1/4;
 }
-.projects {
+.content {
     background-color: $grey;
-    grid-column: 2/4;
-    grid-row: 2/-1;
-}
-.news {
-    background-color: $grey;
-    grid-column: 3/4;
-    grid-row: 2/-1;
 }
